# istefox-dt-mcp

./: .dockerignore  .gitignore  ARCH-BRIEF-DT-MCP.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  bundle_main.py  bundle_main.sh  handoff.md  manifest.json  memory.md  pyproject.toml  server.json
.github/workflows/: ci.yml  integration.yml  publish-registry.yml  release.yml
apps/server/: README.md  pyproject.toml
apps/server/src/istefox_dt_mcp_server/: __init__.py  __main__.py  _record_cassette.py  audit.py  cli.py  deps.py  i18n.py  logging.py  reindex.py  server.py  sync_handler.py  undo.py  webhook.py
apps/server/src/istefox_dt_mcp_server/auth/: __init__.py  consent.py  consent_ui.py  middleware.py  oauth.py  routes.py  scope.py
apps/server/src/istefox_dt_mcp_server/locales/: it.toml
apps/server/src/istefox_dt_mcp_server/prompts/: __init__.py  dt_prompts.py
apps/server/src/istefox_dt_mcp_server/resources/: __init__.py  _common.py  dt_resources.py
apps/server/src/istefox_dt_mcp_server/tools/: __init__.py  _common.py  ask_database.py  bulk_apply.py  file_document.py  find_related.py  list_databases.py  search.py  summarize_topic.py
apps/server/src/istefox_dt_mcp_server/transport/: __init__.py  http.py
apps/sidecar/: README.md  pyproject.toml
apps/sidecar/src/istefox_dt_mcp_sidecar/: __init__.py  chroma_provider.py
docs/: architecture.md  cowork-review-request.md
docs/adr/: 0001-stack-python-fastmcp-chromadb.md  0002-bridge-architecture-jxa-only.md  0003-rag-same-process.md  0004-mvp-tool-scope.md  0005-test-strategy-4-tier.md  0006-oauth-scope-model.md  0007-dt4-only.md  0008-embedding-model-selection.md  0009-create-smart-rule-scope.md  0009-mcp-resources-prompts.md  REVIEW_ADR.md
docs/announcements/: 0.3.0.md  0.4.0.md
docs/development/: cassette-recording.md
docs/jxa-discovery/: 2026-05-04-create-smart-rule.md
docs/smart-rules/: sync_rag.md
docs/spikes/: 2026-05-01-chromadb-stress-test.md
docs/superpowers/plans/: 2026-05-03-drift-detection-3-state.md  2026-05-03-summarize-topic.md  2026-05-04-cassette-vcr-real-data.md  2026-05-04-create-smart-rule.md  2026-05-06-bulk-apply-drift-detection.md  2026-05-06-publish-registry-pat.md  2026-05-08-http-transport-oauth.md  2026-05-17-mcp-resources-prompts.md
docs/superpowers/specs/: 2026-05-03-drift-detection-3-state-design.md  2026-05-03-summarize-topic-design.md  2026-05-04-cassette-vcr-real-data-design.md  2026-05-04-create-smart-rule-design.md  2026-05-06-bulk-apply-drift-detection-design.md  2026-05-06-publish-registry-pat-design.md  2026-05-08-http-transport-oauth-design.md  2026-05-17-mcp-resources-prompts-design.md
libs/adapter/: README.md  pyproject.toml
libs/adapter/src/istefox_dt_mcp_adapter/: __init__.py  cache.py  contract.py  errors.py  jxa.py  rag.py
libs/adapter/src/istefox_dt_mcp_adapter/scripts/: __init__.py  apply_tag.js  classify.js  enumerate_db.js  find_related.js  get_record.js  get_record_text.js  list_databases.js  move_record.js  remove_tag.js  search_bm25.js
libs/schemas/: README.md  pyproject.toml
libs/schemas/src/istefox_dt_mcp_schemas/: __init__.py  audit.py  common.py  errors.py  rag.py  tools.py
scripts/: README.md  benchmark_embeddings.py  build_mcpb.sh  setup_test_database.py  smoke_e2e.py  smoke_e2e.sh  spike_chromadb_stress.py
tests/: conftest.py
tests/benchmark/: test_jxa_latency.py
tests/contract/: test_jxa_replay.py
tests/contract/cassettes/: apply_tag.json  find_related.json  get_record.json  list_databases.json  move_record.json  search_bm25.json
tests/fixtures/: dt-database-manifest.json
tests/integration/: README.md  conftest.py  test_dt_smoke.py  test_http_transport_oauth_live.py  test_jxa_latency.py  test_resources_live.py  test_undo_bulk_apply_drift_live.py
tests/unit/: test_audit.py  test_auth_scope.py  test_cache.py  test_consent_store.py  test_get_record_text.py  test_i18n.py  test_jxa_adapter.py  test_list_databases_consent.py  test_logging_context.py  test_middleware_jwt.py  test_oauth.py  test_oauth_routes.py  test_packaging.py  test_prompts.py  test_rag.py  test_reconcile.py  test_record_cassette.py  test_reindex.py  test_resources_common.py  test_resources_databases.py  test_resources_record.py  test_rrf_fusion.py  test_safe_call_consent.py  test_safe_call_scope.py  test_schemas.py  test_search_modes.py  test_summarize_topic.py  test_sync_handler.py  test_transport_http.py  test_undo.py  test_undo_bulk_apply_drift.py  test_webhook.py
tests/unit/test_tools/: test_ask_database.py  test_bulk_apply.py  test_file_document.py  test_safe_call.py
