[project]
name = "istefox-dt-mcp-workspace"
version = "0.0.1"
description = "DEVONthink 4 MCP Connector — workspace root (meta package, not published)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Stefano Ferri", email = "stefano@stefer.it" }]

# Pulling istefox-dt-mcp-server transitively installs adapter,
# schemas and sidecar via workspace path-deps. Required for the
# .mcpb bundle: the host runs `uv sync` and `uv run python
# bundle_main.py`, and the entry-point needs the server package
# importable in the venv.
dependencies = [
    "istefox-dt-mcp-server",
]

[tool.uv.sources]
istefox-dt-mcp-server = { workspace = true }

[tool.uv.workspace]
members = ["apps/*", "libs/*"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "structlog>=24.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "A",             # flake8-builtins
    "C4",            # comprehensions
    "SIM",           # simplify
    "TCH",           # type-checking imports
    "RUF",           # ruff-specific
]
ignore = [
    "E501",  # line length handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N802", "TC001", "TC002", "TC003"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "apps", "libs"]
# Default session skips benchmarks AND integration tests.
# - Benchmarks: `pytest tests/benchmark`
# - Integration: `pytest tests/integration -m integration` (requires DT running)
addopts = "-v --strict-markers --benchmark-disable --ignore=tests/benchmark -m 'not integration'"
markers = [
    "benchmark: pytest-benchmark micro-benchmarks (opt-in)",
    "contract: VCR-style replay tests against captured JXA outputs",
    "integration: tests requiring DEVONthink running (skip default)",
]
