[project]
name = "istefox-dt-mcp-server"
version = "0.0.1"
description = "MCP server for DEVONthink 4 (FastMCP, dual-transport stdio + streamable HTTP)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Stefano Ferri", email = "stefano@stefer.it" }]

dependencies = [
    # MCP framework + validation
    "fastmcp>=3.2",
    "pydantic>=2.7",
    # CLI
    "click>=8.1",
    # HTTP transport (streamable-HTTP server runtime). FastMCP exposes
    # the API; uvicorn is the actual ASGI runner it dispatches to.
    "uvicorn>=0.30",
    # OAuth 2.1 + PKCE (0.4.0 phase 4): authlib for PKCE verification
    # primitives, joserfc for JWT signing (authlib.jose is deprecated
    # toward 2.x), jinja2 for the consent UI HTML rendering.
    "authlib>=1.3",
    "joserfc>=1.0",
    "jinja2>=3.1",
    # Logging / observability
    "structlog>=24.1",
    "opentelemetry-sdk>=1.25",
    # Workspace siblings
    "istefox-dt-mcp-adapter",
    "istefox-dt-mcp-schemas",
    "istefox-dt-mcp-sidecar",
]

[project.scripts]
istefox-dt-mcp = "istefox_dt_mcp_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
istefox-dt-mcp-adapter = { workspace = true }
istefox-dt-mcp-schemas = { workspace = true }
istefox-dt-mcp-sidecar = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/istefox_dt_mcp_server"]
# Do NOT add a `force-include` mapping into `istefox_dt_mcp_server/`:
# `packages` already ships locale data in the wheel, and a force-include
# there makes the editable install materialize a
# `site-packages/istefox_dt_mcp_server/` namespace shadow (issue #66).
