[project]
name = "istefox-dt-mcp-schemas"
version = "0.0.1"
description = "Shared Pydantic v2 schemas for DEVONthink MCP — tool I/O, audit, errors"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Stefano Ferri", email = "stefano@stefer.it" }]

dependencies = [
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/istefox_dt_mcp_schemas"]
